--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
         "@louislam/sqlite3": "15.1.6",
         "@vvo/tzdb": "^6.125.0",
         "args-parser": "~1.3.0",
-        "axios": "~0.30.0",
+        "axios": "^0.30.1",
         "badge-maker": "~3.3.1",
         "bcryptjs": "~2.4.3",
         "chardet": "~1.4.0",
@@ -82,6 +82,7 @@
         "command-exists": "~1.2.9",
         "compare-versions": "~3.6.0",
         "compression": "~1.7.4",
+        "cors": "^2.8.5",
         "country-flag-emoji-polyfill": "^0.1.8",
         "croner": "~8.1.0",
         "dayjs": "~1.11.5",
@@ -104,6 +105,8 @@
         "jsesc": "~3.0.2",
         "jsonata": "^2.0.3",
         "jsonwebtoken": "~9.0.0",
+        "jspdf": "^3.0.2",
+        "jspdf-autotable": "^5.0.2",
         "jwt-decode": "~3.1.2",
         "kafkajs": "^2.2.4",
         "knex": "~3.1.0",
@@ -132,7 +135,7 @@
         "promisify-child-process": "~4.1.2",
         "protobufjs": "~7.2.4",
         "qs": "~6.10.4",
-        "redbean-node": "~0.3.0",
+        "redbean-node": "^0.3.3",
         "redis": "~4.5.1",
         "semver": "~7.5.4",
         "socket.io": "~4.8.0",
@@ -142,7 +145,8 @@
         "tcp-ping": "~0.1.1",
         "thirty-two": "~1.0.2",
         "tough-cookie": "~4.1.3",
-        "ws": "^8.13.0"
+        "ws": "^8.13.0",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@actions/github": "~6.0.0",
