update report page pagination UI

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "files.eol": "\n",
   "prettier.endOfLine": "lf",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "vscode-pets.theme": "beach"
 }
